--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "npm run build && find ./lib -name '*.test.js' | xargs mocha -R spec",
-    "scratch": "npm run build && node ./lib/index.js",
+    "scratch": "npm run build && node ./lib/index.js examples/Importing-JS.md",
     "build": "sh build.sh"
   },
   "license": "MIT",
@@ -18,15 +18,16 @@
     "mocha": "^3.4.2"
   },
   "dependencies": {
-    "deep-equal": "^1.0.1",
-    "deep-freeze": "0.0.1",
-    "nearley": "^2.11.0",
     "ajv": "^5.2.2",
     "args-js": "^0.10.12",
+    "commander": "^2.12.2",
+    "deep-equal": "^1.0.1",
+    "deep-freeze": "0.0.1",
     "get-arguments": "^1.0.2",
     "is-valid-path": "^0.1.1",
     "json-schema-deref-sync": "^0.3.3",
     "lodash": "^4.17.4",
+    "nearley": "^2.11.0",
     "object-filter": "^1.0.2",
     "object-path": "^0.11.4",
     "object.map": "^1.0.0",
