--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "optic-markdown-sdk",
+  "name": "optic-markdown",
   "version": "0.1.0",
   "description": "",
-  "main": "lib/index.js",
+  "main": "lib/cli.js",
   "scripts": {
     "test": "npm run build && find ./lib -name '*.test.js' | xargs mocha -R spec",
     "scratch": "npm run build && node ./lib/index.js examples/ShowConfirmAlert.md",
@@ -34,6 +34,7 @@
     "object-filter": "^1.0.2",
     "object-path": "^0.11.4",
     "object.map": "^1.0.0",
+    "prompt": "^1.0.0",
     "read-file": "^0.2.0"
   }
 }
