--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "optic-markdown",
   "version": "0.1.0",
-  "description": "",
+  "description": "Human & Machine Readable Docs",
   "main": "lib/cli.js",
   "scripts": {
     "test": "npm run build && find ./lib -name '*.test.js' | xargs mocha -R spec",
