--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "object-path": "^0.11.4",
     "object.map": "^1.0.0",
     "prompt": "^1.0.0",
-    "read-file": "^0.2.0"
+    "read-file": "^0.2.0",
+    "safe-eval": "^0.3.0"
   }
 }
