--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "optic-markdown",
-  "version": "0.1.8",
+  "version": "0.1.9-alpha.1",
   "description": "Human & Machine Readable Docs",
   "main": "lib/cli.js",
   "scripts": {
