Changed command line name to opticmd

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "sh build.sh"
   },
   "bin": {
-    "optic-md": "lib/cli.js"
+    "opticmd": "lib/cli.js"
   },
   "license": "MIT",
   "devDependencies": {
