--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "optic-markdown",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "Human & Machine Readable Docs",
   "main": "lib/cli.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "commander": "^2.12.2",
     "deep-equal": "^1.0.1",
     "deep-freeze": "0.0.1",
+    "fs-extra": "^5.0.0",
     "get-arguments": "^1.0.2",
     "is-valid-path": "^0.1.1",
     "json-schema-deref-sync": "^0.3.3",
