--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "optic-markdown",
-  "version": "0.1.12",
+  "version": "0.1.13-rc1",
   "description": "Human & Machine Readable Docs",
   "main": "lib/cli.js",
   "scripts": {
@@ -37,6 +37,8 @@
     "json-schema-deref-sync": "^0.3.3",
     "keytar": "^4.2.1",
     "lodash": "^4.17.4",
+    "lodash.filter": "^4.6.0",
+    "lodash.includes": "^4.3.0",
     "nearley": "^2.11.0",
     "object-filter": "^1.0.2",
     "object-path": "^0.11.4",
