--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.4",
     "lodash.filter": "^4.6.0",
     "lodash.includes": "^4.3.0",
+    "moo": "^0.4.3",
     "nearley": "^2.11.0",
     "object-filter": "^1.0.2",
     "object-path": "^0.11.4",
