--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run build && find ./lib -name '*.test.js' | xargs mocha -R spec",
     "scratch": "npm run build && node ./lib/cli.js examples/ShowConfirmAlert.md",
-    "build": "sh build.sh"
+    "build": "sh build.sh",
+    "packageNative": "npm run build && pkg native/package.json --output opticmarkdown"
   },
   "bin": {
     "opticmd": "lib/cli.js"
