--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "optic-markdown",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Human & Machine Readable Docs",
   "main": "lib/cli.js",
   "scripts": {
@@ -45,7 +45,7 @@
     "object-filter": "^1.0.2",
     "object-path": "^0.11.4",
     "object.map": "^1.0.0",
-    "optic-js-common": "file:../optic-js-common/optic-js-common-1.0.1.tgz",
+    "optic-js-common": "^1.0.2",
     "prompt": "^1.0.0",
     "read-file": "^0.2.0",
     "request": "^2.85.0",
